# Chess

./: .gitignore  Board.hpp  CMakeLists.txt  README.md  board.txt  main.cpp
assets/image/bP/states/move/: config.json
assets/image/bQ/states/short_rest/: config.json
assets/image/wQ/states/jump/: config.json
assets/pieces2/bK/states/idle/: config.json
assets/pieces2/wB/states/jump/: config.json
assets/pieces2/wK1/states/long_rest/: config.json
client/: NetworkClient.cpp  NetworkClient.hpp  main.cpp
cpp/src/: img.cpp  img.hpp
server/: GameLoop.cpp  GameLoop.hpp  NetworkServer.cpp  NetworkServer.hpp  WebSocketServer.cpp  WebSocketServer.hpp  main.cpp
src/: Constants.hpp
src/arbiter/: Motion.hpp  MotionAdvancer.hpp  RealTimeArbiter.cpp  RealTimeArbiter.hpp
src/audio/: AudioManager.hpp  SoundEffects.hpp
src/commands/: CommandExecutor.cpp  CommandExecutor.hpp  CommandType.hpp
src/config/: AnimConfig.hpp  AnimationConfigProvider.cpp  AnimationConfigProvider.hpp  GameConfig.hpp  JsonHelper.cpp  JsonHelper.hpp  PieceConfig.hpp  PieceConfigManager.cpp  PieceConfigManager.hpp  SpriteLoader.cpp  SpriteLoader.hpp
src/controllerClick/: BoardMapper.cpp  BoardMapper.hpp  CellPos.hpp  ClickResult.hpp  controllerClick.cpp  controllerClick.hpp
src/game_engine/: GameEngine.cpp  GameEngine.hpp  SnapshotBuilder.hpp
src/model/: Board.cpp  Board.hpp  Piece.cpp  Piece.hpp  PieceFactory.hpp
src/movement/: BishopRule.cpp  BishopRule.hpp  KingRule.cpp  KingRule.hpp  KnightRule.cpp  KnightRule.hpp  MoveRule.hpp  PawnRule.cpp  PawnRule.hpp  QueenRule.cpp  QueenRule.hpp  RookRule.cpp  RookRule.hpp
src/network/: Message.hpp  MessageDispatcher.hpp  NetworkClient.cpp  NetworkClient.hpp  Protocol.hpp  Serializer.cpp  Serializer.hpp
src/renderer/: AnimConfig.hpp  AnimatorPool.cpp  AnimatorPool.hpp  GameSnapshot.hpp  ImgRenderer.cpp  ImgRenderer.hpp  Renderer.hpp  SpriteAnimator.cpp  SpriteAnimator.hpp  SpriteLoader.cpp  SpriteLoader.hpp
src/rule_engine/: RuleEngine.cpp  RuleEngine.hpp  RuleResult.hpp
src/text_io/: BoardBuilder.cpp  BoardBuilder.hpp  BoardParser.cpp  BoardParser.hpp  BoardPrinter.cpp  BoardPrinter.hpp  PieceFactory.cpp  PieceFactory.hpp
tests/: test_new.cpp  test_ws.py
tests/text_test_runner/: TextTestRunner.cpp  TextTestRunner.hpp
דפים/: Pawn.h  board.cpp  board.h  commands.cpp  main.cpp
טסטים/: tests10.cpp  tests5.cpp  tests7.cpp  tests9.cpp
תמונות/: מצגת.pptx
